[project]
name = "pyheuristiclib"
version = "0.1.4.5"
description = "Python bindings for the HeuristicLib"
authors = [
    { name="HEAL"}
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pythonnet>=3.0.5",
    "numpy>=2.2.6"
]

[project.urls]
"Homepage" = "https://github.com/heal-research/PyHeuristicLib"

[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyheuristiclib.heuristiclib = [
  "*.dll",
  "**/*.dll",
  "*.json",
  "**/*.json",
  "*.deps.json",
  "*.runtimeconfig.json",
]